<resources>
    <string name="app_name">PumpItUp</string>
    <string name="btn_addStation">Add Station</string>

    <string name="hint_station_name">Station Name</string>
    <string name="hint_petrol_price">Petrol Price</string>
    <string name="hint_diesel_price">Diesel Price</string>
    <string name="hint_eircode">Eircode</string>
    <string name="hint_address">Address</string>

    <string name="title_pump_activity_list">PumpListActivity</string>
    <string name="title_pump_activity_main">MainActivity</string>


    <string name="menu_addPump">Add</string>
    <string name="activity_cancelAddPump">Cancel</string>

    //Cancel Button when on main activity
    <string name="edit_activity"> Save Station</string>
    <string name="enter_station_title"> Please enter a Station Title </string>


    <string-array name="stationNames">
        <item> Amber </item>
        <item> Apple Green </item>
        <item> Circle K </item>
        <item> Inver </item>
        <item> Morris </item>
        <item> Shell </item>
        <item> Texaco </item>
        <item> Top Oil </item>
        <item> Emo </item>
    </string-array>
    <string name="email_text">Email </string>
    <string name="password_text">Password</string>
    <string name="signin_text">Sign In</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="welcome_text">Welcome to PumpItUp! \n</string>
    <string name="welcome_text2">Here is a list of you Stations \n</string>
    <string name="title_activity_display">DisplayActivity</string>

    <string name="search">Search</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_nav_drawer_main">NavDrawerMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Add Stations</string>
    <string name="menu_stations_list">Stations List</string>
    <string name="menu_pumplist">PumpList</string>
    <string name="menu_drive">Driving 101</string>
    <string name="menu_map">Map</string>
    <string name="menu_out">Log Out</string>


    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Closed</string>

    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_nav">NavActivity</string>




</resources>
