<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.setu.pumpitup.activities.PumpListActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/welcome_text"
        android:padding="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcome_list"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="90dp"
        android:hint="@string/welcome_text2"
        android:padding="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_anchor="@+id/welcome_list"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="351dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:background="@drawable/button_background"
        android:layout_width="124dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/logout_text"
        app:layout_anchor="@+id/bottomAppBar"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
